--- a/app/src/main/res/layout/card_book.xml
+++ b/app/src/main/res/layout/card_book.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="result"
             type="com.kartikk.prolificapp.prolificapp.models.Book" />
+
+        <import type="android.view.View" />
     </data>
 
     <android.support.v7.widget.CardView
@@ -36,6 +38,7 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:transitionName="bookTitle"
+                android:visibility="@{safeUnbox(result.isTitleValid())? View.VISIBLE : View.GONE}"
                 tools:targetApi="lollipop" />
 
             <TextView
@@ -45,7 +48,8 @@
                 android:layout_marginTop="2dp"
                 android:ellipsize="marquee"
                 android:maxLines="1"
-                android:text="@{result.author}" />
+                android:text="@{result.author}"
+                android:visibility="@{safeUnbox(result.isAuthorValid())? View.VISIBLE : View.GONE}" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </layout>
