--- a/app/src/main/res/menu/menu_share.xml
+++ b/app/src/main/res/menu/menu_share.xml
@@ -5,6 +5,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
     android:id="@+id/menu_item_share"
     app:showAsAction="ifRoom"
-    android:title="Share"
+    android:title="@string/menu_share"
     app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
 </menu>
