--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -12,6 +12,7 @@
     </data>
 
     <ScrollView
+        android:id="@+id/bookDetailScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -57,8 +58,7 @@
             <TextView
                 android:id="@+id/bookLastCheckedOut"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="@{ safeUnbox(data.isCheckedOutAndCheckedOutByValid())? View.GONE : View.VISIBLE}" />
+                android:layout_height="wrap_content" />
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/bookCheckoutButton"
