--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/mainActivityLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.kartikk.prolificapp.prolificapp.MainActivity">
