Moved add book from menu to FAB

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/mainActivityLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,6 +13,17 @@
             android:layout_height="match_parent"
             android:visibility="gone" />
 
-    </LinearLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/mainFAB"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right|bottom"
+            android:layout_marginBottom="16dp"
+            android:src="@drawable/ic_add_white_vector"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:clickable="true" />
+
+    </FrameLayout>
 </layout>
 
