--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
+    <android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/mainActivityLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,6 +24,6 @@
             android:layout_marginRight="16dp"
             android:clickable="true" />
 
-    </FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
 
