--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,9 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_sort"
+        android:icon="@drawable/ic_sort_white_vector"
+        android:title="@string/menu_main_sort_by"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/menu_delete_all"
-        android:title="@string/menu_main_delete_all"
         android:icon="@drawable/ic_delete_sweep_white_vector"
+        android:title="@string/menu_main_delete_all"
         app:showAsAction="ifRoom" />
 
     <item
