--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,19 @@
         android:layout_height="match_parent"
         tools:context="com.kartikk.prolificapp.prolificapp.MainActivity">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/booksRecyclerView"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/booksRecyclerSwipeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:visibility="gone">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/booksRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                android:visibility="gone" />
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/mainFAB"
@@ -19,10 +27,10 @@
             android:layout_height="50dp"
             android:layout_gravity="right|bottom"
             android:layout_marginBottom="16dp"
-            android:src="@drawable/ic_add_white_vector"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:clickable="true" />
+            android:clickable="true"
+            android:src="@drawable/ic_add_white_vector" />
 
     </android.support.design.widget.CoordinatorLayout>
 </layout>
